--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="#Sensei">Work</a></li>
+                    <li><a href="#Work">Work</a></li>
                     <li><a href="#Contact">Contact</a></li>
                 </ul>
             </nav>
@@ -43,6 +43,12 @@
             <div class="greet-thumb">
                 <img src="images/thmb.png"></img>
             </div>
+        </div>
+    </section>
+
+    <section class="containerImg" id="Work">
+        <div class="containerImg flex shadow">
+            <img src="images/JobPlace.png" class='jobplace-img'></img>
         </div>
     </section>
 
