--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
         </div>
     </section>
 
-    <section class="containerImg" id="Work">
-        <div class="containerImg flex shadow">
+    <section id="Work">
+        <div class=" flex">
             <img src="images/JobPlace.png" class='jobplace-img'></img>
         </div>
     </section>
@@ -55,7 +55,7 @@
     <!-- Languages -->
     <section class="containerImg languages" id="Sensei">
         <h2 class="languages-title">Sensei <span class="sensei-jap">先生</span></h2>
-        <div class="containerImg flex shadow">
+        <div class="containerImg flex">
             <img src="images/Sensei.png" class='Sensei-img'></img>
             <img src="images/Sensei1.png" class='Sensei-img'></img>
             <img src="images/Sensei2.png" class='Sensei-img'></img>
